Initial progress in the sync framework migration. PhysicalConnectionsService relocated. OSP package structure and reference provider renamed. Some OSP classes relocated.